[project]
name = "drone-trace"
version = "0.1.0"
description = "A simple library for parsing, processing, and visualizing drone flight data."
readme = "README.md"
authors = [
    { name = "Brandon Lotero", email = "blotero@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
]


[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["drone_trace*"]


[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"